# kenning-zephyr-runtime

./: .ci.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md  requirements.txt  west.yml  zpl.conf
.github/workflows/: ci.yml  docker.yml
app/: CMakeLists.txt  Kconfig  ai8x_c.conf  debug.conf  emlearn.conf  executorch.conf  iree_embedded_elf.conf  iree_vmvx.conf  llext.conf  llext_tflite.conf  llext_tvm.conf  prj.conf  sample.yaml  tflite.conf  tvm.conf  zpl_gdb.conf  zpl_uart.conf
app/boards/: b_u585i_iot02a.overlay  hifive_unleashed.overlay  hifive_unleashed_fu540_e51.overlay  khadas_edgev_rk3399.overlay  max32690evkit_max32690_m4.overlay  max32690fthr_max32690_m4.conf  max32690fthr_max32690_m4.overlay  max78002evkit_max78002_m4.overlay  nrf52840dk_nrf52840.overlay  stm32f746g_disco.overlay
app/src/: main.c
cmake/: board_repl.cmake  gen_model_header.cmake  increase_board_memory.cmake
demo_app/: CMakeLists.txt  Kconfig  executorch.conf  iree_embedded_elf.conf  iree_vmvx.conf  prj.conf  tflite.conf  tflite_int8.conf  tvm.conf  tvm_gen.conf  tvm_int8.conf  zpl_gdb.conf  zpl_uart.conf
demo_app/boards/: stm32f746g_disco.overlay
demo_app/model/executorch/: magic_wand.pte  magic_wand.pte.json
demo_app/model/tflite/: magic_wand.tflite.json  magic_wand_int8.tflite  magic_wand_no_softmax.tflite  model.tflite
demo_app/model/tvm/: magic_wand.graph_data  magic_wand.graph_data.json  magic_wand.json  magic_wand_graph.json  magic_wand_int8.json  magic_wand_int8_graph.json  model_graph.json
demo_app/src/: input_data.h  main.c  quantization_params.h.in
environments/: Dockerfile
include/kenning_inference_lib/core/: callbacks.h  inference_server.h  kenning_protocol.h  loaders.h  logger.h  model.h  model_constraints.h  protocol.h  runtime_wrapper.h  utils.h
kenning-scenarios/: renode-zephyr-auto-tflite-automl-vae-max32690.yml  renode-zephyr-auto-tflite-magic-wand-inference.json  renode-zephyr-auto-tvm-llext-magic-wand-inference.json  renode-zephyr-auto-tvm-magic-wand-inference.json  renode-zephyr-iree-embedded-elf-arm32-magic-wand-inference.yml  renode-zephyr-iree-embedded-elf-riscv64-magic-wand-inference.yml  renode-zephyr-iree-vmvx-magic-wand-inference.yml  renode-zephyr-tflite-llext-magic-wand-inference.json  renode-zephyr-tflite-llext-magic-wand-inference.yml  renode-zephyr-tflite-magic-wand-inference-hifive-unmatched.json  renode-zephyr-tflite-magic-wand-inference.json  renode-zephyr-tflite-magic-wand-inference.yml  renode-zephyr-tflite-magic-wand-int8-inference.json  renode-zephyr-tflite-vae-inference-max32690.json  renode-zephyr-tvm-llext-auto-magic-wand-inference.json  renode-zephyr-tvm-llext-magic-wand-inference.json  renode-zephyr-tvm-llext-magic-wand-inference.yml  renode-zephyr-tvm-magic-wand-inference.json  renode-zephyr-tvm-vae-inference-max32690.json  renode-zephyr-zephelin-gdb-tvm-magic-wand.yml  zephyr-ai8x-anomaly-detection-cnn.yml  zephyr-executorch-magic-wand-inference.yml  zephyr-iree-arm32-magic-wand-inference.json  zephyr-iree-arm32-magic-wand-inference.yml  zephyr-iree-embedded-elf-arm32-magic-wand-inference.yml  zephyr-iree-embedded-elf-riscv64-magic-wand-inference.yml  zephyr-iree-riscv64-magic-wand-inference.json  zephyr-iree-riscv64-magic-wand-inference.yml  zephyr-iree-vmvx-magic-wand-inference.yml  zephyr-tflite-llext-magic-wand-inference.json  zephyr-tflite-llext-magic-wand-inference.yml  zephyr-tflite-magic-wand-inference.json  zephyr-tflite-vae-inference-max32690-renode.yaml  zephyr-tflite-vae-inference-max32690.yml  zephyr-tvm-llext-magic-wand-inference.json  zephyr-tvm-magic-wand-inference.json  zephyr-tvm-magic-wand-inference.yml  zephyr-tvm-vae-inference-max32690-renode.yaml  zephyr-tvm-vae-inference-max32690.yml  zephyr-zephelin-gdb-tvm-magic-wand.yml
kenning-scenarios/anomaly-detecton-infernece/: ai8x-cnn-max78002.yml
kenning-scenarios/magic-wand-inference/executorch/: renode-auto-khadas_edgev.yml  renode-khadas_edgev.yml
kenning-scenarios/magic-wand-inference/tflite/: renode-auto-llext-stm32f746.yml  renode-auto-stm32f746g.yml  renode-hifive_unmatched_fu740.yml  renode-quantized-int8-hifive_unmatched_fu740.yml  stm32f746g.yml
kenning-scenarios/magic-wand-inference/tvm/: llext-stm32f746g.yml  renode-auto-llext-stm32f746g.yml  renode-auto-stm32f746g.yml  renode-auto-zephelin-stm32f746g.yml  renode-llext-stm32f746g.yml  renode-stm32f746g.yml  renode-zephelin-gdb-stm32f746g.yml  zephelin-gdb-stm32f746g.yml
kenning-scenarios/vae-inference/: tflite-max32690.yml  tvm-max32690.yml
lib/: CMakeLists.txt  Kconfig
lib/kenning_inference_lib/: CMakeLists.txt  Kconfig
lib/kenning_inference_lib/cmake/: model.cmake
modules/: modules.cmake
modules/dlpack/: CMakeLists.txt  Kconfig  module.yml
modules/executorch/: CMakeLists.txt  Kconfig
modules/iree/: CMakeLists.txt  Kconfig  arch_config.h  module.yml  zephyr_config.h
modules/iree/flatcc/: CMakeLists.txt
modules/tvm/: CMakeLists.txt  Kconfig  crt_config.h  memory_leak_fix.patch  module.yml  nop.patch
renode/config/: nrf52840dk_nrf52840.resc  stm32f746g_disco.resc
renode/scripts/: hifive_unmatched.resc  max32690evkit.resc  max32690fthr.resc  stm32f746g_disco.resc
scripts/: ai8x_fetch.py  build_iree.py  build_tflite.py  build_tvm.py  gen_increased_memory_overlay.py  gen_tvm_ops.py  io_spec_to_struct.py  prepare_modules.sh  prepare_renode.sh  prepare_zephyr_env.sh  run_renode.py  run_renode.sh  test_emlearn.sh  test_llext.sh  test_readme.sh  test_tflite_reset.sh  upload_llext_runtime.py
tests/demo/: requirements.txt  test_demo.py
tests/lib/kenning_inference_lib/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/kenning_inference_lib/src/: utils.h
tests/lib/kenning_inference_lib/src/core/: test_callbacks.c  test_inference_server.c  test_kenning_protocol.c  test_model.c
tests/lib/kenning_inference_lib/src/mocks/: kernel.h  llext.h  log.h  uart.h
tests/lib/kenning_inference_lib/src/protocols/: test_uart.c
tests/scenarios/: test-tflite-llext.yml  test-tvm-llext.yml  tflite-test-vae.yml
zephyr/: module.yml  patches.yml
(+52 files in other folders)
